<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".OptionActivity"
    android:padding="7dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/option_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:text="@string/option_title"
        android:textSize="?attr/sizeTitleText"
        android:textStyle="bold"
        />

    <View
        android:id="@+id/title_border"
        android:layout_width="match_parent"
        android:layout_height="3dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option_title_tv"

        android:background="?attr/colorBox"
        />






    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/change_language_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_border"

        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="10dp"

        android:background="?attr/colorBox"
        >

        <TextView
            android:id="@+id/change_language_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_margin="10dp"

            android:text="@string/change_language"
            android:textColor="?attr/colorTextInBox"
            android:textStyle="bold"
            android:textSize="?attr/sizeSubtitleText" />

        <ImageButton
            android:id="@+id/change_language_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_marginTop="3dp"
            android:src="@drawable/arrow_up"

            android:clickable="false"
            android:background="@android:color/transparent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/change_language_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_language_tv"

            android:paddingBottom="10dp"
            android:layout_marginHorizontal="10dp"


            >

            <View
                android:id="@+id/language_border"
                android:layout_width="match_parent"
                android:layout_height="3dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                android:background="@color/white"
                />

            <Button
                android:id="@+id/change_language_korean_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/change_language_english_button"
                app:layout_constraintTop_toTopOf="parent"

                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"

                android:text="@string/change_language_korean"
                android:textSize="?attr/sizeSubtitleText"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/change_language_english_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toEndOf="@id/change_language_korean_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"

                android:text="@string/change_language_english"
                android:textSize="?attr/sizeSubtitleText"
                android:textStyle="bold"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>










    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/change_theme_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_language_box"

        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="10dp"

        android:background="?attr/colorBox"
        >

        <TextView
            android:id="@+id/change_theme_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_margin="10dp"

            android:text="@string/change_theme"
            android:textColor="?attr/colorTextInBox"
            android:textStyle="bold"
            android:textSize="?attr/sizeSubtitleText" />

        <ImageButton
            android:id="@+id/change_theme_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_marginTop="3dp"
            android:src="@drawable/arrow_up"

            android:clickable="false"
            android:background="@android:color/transparent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/change_theme_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_theme_tv"

            android:paddingBottom="10dp"
            android:layout_marginHorizontal="10dp"


            >

            <View
                android:id="@+id/theme_border"
                android:layout_width="match_parent"
                android:layout_height="3dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                android:background="@color/white"
                />

            <Button
                android:id="@+id/change_theme_light_bn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/change_theme_dark_bn"
                app:layout_constraintTop_toTopOf="parent"

                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"

                android:text="@string/change_theme_light"
                android:textSize="?attr/sizeSubtitleText"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/change_theme_dark_bn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toEndOf="@id/change_theme_light_bn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"

                android:text="@string/change_theme_dark"
                android:textSize="?attr/sizeSubtitleText"
                android:textStyle="bold"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>










    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/change_font_size_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_theme_box"

        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="10dp"

        android:background="?attr/colorBox"
        >

        <TextView
            android:id="@+id/change_font_size_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_margin="10dp"

            android:text="@string/change_font_size"
            android:textColor="?attr/colorTextInBox"
            android:textStyle="bold"
            android:textSize="?attr/sizeSubtitleText" />

        <ImageButton
            android:id="@+id/change_font_size_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_marginTop="3dp"
            android:src="@drawable/arrow_up"

            android:clickable="false"
            android:background="@android:color/transparent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/change_font_size_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_font_size_tv"

            android:paddingBottom="10dp"
            android:layout_marginHorizontal="10dp"


            >

            <View
                android:id="@+id/font_size_border"
                android:layout_width="match_parent"
                android:layout_height="3dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                android:background="@color/white"
                />

            <Button
                android:id="@+id/change_font_size_normal_bn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/change_font_size_large_bn"
                app:layout_constraintTop_toTopOf="parent"

                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"

                android:text="@string/change_font_size_normal"
                android:textSize="?attr/sizeSubtitleText"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/change_font_size_large_bn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toEndOf="@id/change_font_size_normal_bn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"

                android:text="@string/change_font_size_large"
                android:textSize="?attr/sizeSubtitleText"
                android:textStyle="bold"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>








    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/change_font_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_font_size_box"

        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="10dp"

        android:background="?attr/colorBox"
        >

        <TextView
            android:id="@+id/change_font_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_margin="10dp"

            android:text="@string/change_font"
            android:textColor="?attr/colorTextInBox"
            android:textStyle="bold"
            android:textSize="?attr/sizeSubtitleText" />

        <ImageButton
            android:id="@+id/change_font_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_marginTop="3dp"
            android:src="@drawable/arrow_up"

            android:clickable="false"
            android:background="@android:color/transparent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/change_font_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_font_tv"

            android:paddingBottom="10dp"
            android:layout_marginHorizontal="10dp"


            >

            <View
                android:id="@+id/font_border"
                android:layout_width="match_parent"
                android:layout_height="3dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                android:background="@color/white"
                />

            <Button
                android:id="@+id/change_font_a_bn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/change_font_b_bn"
                app:layout_constraintTop_toTopOf="parent"

                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"

                android:text="@string/change_font_a"
                android:textSize="?attr/sizeSubtitleText"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/change_font_b_bn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toEndOf="@id/change_font_a_bn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"

                android:text="@string/change_font_b"
                android:textSize="?attr/sizeSubtitleText"
                android:textStyle="bold"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/test_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/change_font_box"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"

        android:text="@string/to_test_btn"
        android:textSize="18sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>