<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPage">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editpage_lo_toplayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
      
    <ImageView
        android:id="@+id/editpage_iv_cancel"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_close_24"
        app:tint="?attr/colorImageView" />

    <ImageView
        android:id="@+id/editpage_iv_save"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/editpage_iv_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editpage_iv_cancel"
        app:srcCompat="@drawable/baseline_check_24"
        app:tint="?attr/colorBox" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editpage_lo_profileconstraint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/editpage_lo_toplayer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHeight_percent="0.8">
        <ScrollView
            android:id="@+id/editpage_lo_profilescroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/editpage_lo_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"

                    android:background="?attr/colorBox"
                    android:paddingVertical="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/editpage_iv_profilepic"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="16dp"

                        android:scaleType="fitCenter"
                        android:src="@drawable/no_image"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/editpage_tv_myid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"

                        android:text="@string/mypage_myid"
                        android:textColor="?attr/colorTextInBox"
                        android:textSize="20dp"

                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/editpage_et_myname"
                        app:layout_constraintStart_toEndOf="@+id/editpage_iv_profilepic"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="spread" />

                    <EditText
                        android:id="@+id/editpage_et_myname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/mypage_myname"
                        android:textColor="?attr/colorTextInBox"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:maxLength="80"
                        android:maxLines="1"

                        app:layout_constraintBottom_toTopOf="@+id/editpage_et_nickname"
                        app:layout_constraintStart_toStartOf="@+id/editpage_tv_myid"
                        app:layout_constraintTop_toBottomOf="@+id/editpage_tv_myid" />

                    <EditText
                        android:id="@+id/editpage_et_nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/mypage_nickname"
                        android:textColor="?attr/colorTextInBox"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:maxLength="80"
                        android:maxLines="1"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/editpage_et_myname"
                        app:layout_constraintTop_toBottomOf="@+id/editpage_et_myname" />


                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/editpage_lo_imgoptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"

                    android:visibility="invisible"

                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="?attr/colorBox"
                    android:paddingBottom="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/editpage_lo_profile"
                    app:layout_constraintStart_toStartOf="@+id/editpage_lo_profile"
                    app:layout_constraintTop_toBottomOf="@+id/editpage_lo_profile">
                    <TextView
                        android:id="@+id/editpage_tv_optionstitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/editpage_tv_optionstitle"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="?attr/colorTextInBox"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <GridLayout
                        android:id="@+id/editpage_lo_optionslist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:padding="10dp"
                        android:columnCount="3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editpage_tv_optionstitle">

                    </GridLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editpage_lo_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/box"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editpage_lo_toplayer">

        <EditText
            android:id="@+id/editpage_et_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/detail_shp_layout_comment_box_bg"
            android:gravity="top"
            android:hint="@string/mypage_intro_hint"
            android:maxLength="150"

            android:padding="10dp"
            android:textAlignment="gravity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>